crates/ruff_python_parser/src/snapshots/ruff_python_parser__function__tests__function_pos_args.snap
---
source: crates/ruff_python_parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        FunctionDef(
            StmtFunctionDef {
                range: 0..20,
                name: Identifier {
                    id: "f",
                    range: 4..5,
                },
                parameters: Parameters {
                    range: 5..14,
                    posonlyargs: [],
                    args: [
                        ParameterWithDefault {
                            range: 6..7,
                            def: Parameter {
                                range: 6..7,
                                arg: Identifier {
                                    id: "a",
                                    range: 6..7,
                                },
                                annotation: None,
                            },
                            default: None,
                        },
                        ParameterWithDefault {
                            range: 9..10,
                            def: Parameter {
                                range: 9..10,
                                arg: Identifier {
                                    id: "b",
                                    range: 9..10,
                                },
                                annotation: None,
                            },
                            default: None,
                        },
                        ParameterWithDefault {
                            range: 12..13,
                            def: Parameter {
                                range: 12..13,
                                arg: Identifier {
                                    id: "c",
                                    range: 12..13,
                                },
                                annotation: None,
                            },
                            default: None,
                        },
                    ],
                    vararg: None,
                    kwonlyargs: [],
                    kwarg: None,
                },
                body: [
                    Pass(
                        StmtPass {
                            range: 16..20,
                        },
                    ),
                ],
                decorator_list: [],
                returns: None,
                type_params: [],
            },
        ),
    ],
)
