crates/ruff_python_parser/src/snapshots/ruff_python_parser__function__tests__function_pos_args_with_defaults.snap
---
source: crates/ruff_python_parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        FunctionDef(
            StmtFunctionDef {
                range: 0..26,
                decorator_list: [],
                name: Identifier {
                    id: "f",
                    range: 4..5,
                },
                type_params: None,
                parameters: Parameters {
                    range: 5..20,
                    posonlyargs: [],
                    args: [
                        ParameterWithDefault {
                            range: 6..7,
                            parameter: Parameter {
                                range: 6..7,
                                name: Identifier {
                                    id: "a",
                                    range: 6..7,
                                },
                                annotation: None,
                            },
                            default: None,
                        },
                        ParameterWithDefault {
                            range: 9..13,
                            parameter: Parameter {
                                range: 9..10,
                                name: Identifier {
                                    id: "b",
                                    range: 9..10,
                                },
                                annotation: None,
                            },
                            default: Some(
                                Constant(
                                    ExprConstant {
                                        range: 11..13,
                                        value: Int(
                                            20,
                                        ),
                                        kind: None,
                                    },
                                ),
                            ),
                        },
                        ParameterWithDefault {
                            range: 15..19,
                            parameter: Parameter {
                                range: 15..16,
                                name: Identifier {
                                    id: "c",
                                    range: 15..16,
                                },
                                annotation: None,
                            },
                            default: Some(
                                Constant(
                                    ExprConstant {
                                        range: 17..19,
                                        value: Int(
                                            30,
                                        ),
                                        kind: None,
                                    },
                                ),
                            ),
                        },
                    ],
                    vararg: None,
                    kwonlyargs: [],
                    kwarg: None,
                },
                returns: None,
                body: [
                    Pass(
                        StmtPass {
                            range: 22..26,
                        },
                    ),
                ],
            },
        ),
    ],
)
