crates/ruff_python_parser/src/snapshots/ruff_python_parser__function__tests__function_pos_args_with_defaults_and_varargs_and_kwargs.snap
---
source: crates/ruff_python_parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        FunctionDef(
            StmtFunctionDef {
                range: 0..46,
                is_async: false,
                decorator_list: [],
                name: Identifier {
                    id: "f",
                    range: 4..5,
                },
                type_params: None,
                parameters: Parameters {
                    range: 5..40,
                    posonlyargs: [
                        ParameterWithDefault {
                            range: 6..7,
                            parameter: Parameter {
                                range: 6..7,
                                name: Identifier {
                                    id: "a",
                                    range: 6..7,
                                },
                                annotation: None,
                            },
                            default: None,
                        },
                        ParameterWithDefault {
                            range: 9..13,
                            parameter: Parameter {
                                range: 9..10,
                                name: Identifier {
                                    id: "b",
                                    range: 9..10,
                                },
                                annotation: None,
                            },
                            default: Some(
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 11..13,
                                        value: Int(
                                            20,
                                        ),
                                    },
                                ),
                            ),
                        },
                    ],
                    args: [
                        ParameterWithDefault {
                            range: 18..22,
                            parameter: Parameter {
                                range: 18..19,
                                name: Identifier {
                                    id: "c",
                                    range: 18..19,
                                },
                                annotation: None,
                            },
                            default: Some(
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 20..22,
                                        value: Int(
                                            30,
                                        ),
                                    },
                                ),
                            ),
                        },
                    ],
                    vararg: Some(
                        Parameter {
                            range: 24..29,
                            name: Identifier {
                                id: "args",
                                range: 25..29,
                            },
                            annotation: None,
                        },
                    ),
                    kwonlyargs: [],
                    kwarg: Some(
                        Parameter {
                            range: 31..39,
                            name: Identifier {
                                id: "kwargs",
                                range: 33..39,
                            },
                            annotation: None,
                        },
                    ),
                },
                returns: None,
                body: [
                    Pass(
                        StmtPass {
                            range: 42..46,
                        },
                    ),
                ],
            },
        ),
    ],
)
