crates/ruff_python_parser/src/snapshots/ruff_python_parser__function__tests__lambda_kw_only_args.snap
---
source: crates/ruff_python_parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        Expr(
            StmtExpr {
                range: 0..20,
                value: Lambda(
                    ExprLambda {
                        range: 0..20,
                        parameters: Parameters {
                            range: 7..17,
                            posonlyargs: [],
                            args: [],
                            vararg: None,
                            kwonlyargs: [
                                ParameterWithDefault {
                                    range: 10..11,
                                    def: Parameter {
                                        range: 10..11,
                                        arg: Identifier {
                                            id: "a",
                                            range: 10..11,
                                        },
                                        annotation: None,
                                    },
                                    default: None,
                                },
                                ParameterWithDefault {
                                    range: 13..14,
                                    def: Parameter {
                                        range: 13..14,
                                        arg: Identifier {
                                            id: "b",
                                            range: 13..14,
                                        },
                                        annotation: None,
                                    },
                                    default: None,
                                },
                                ParameterWithDefault {
                                    range: 16..17,
                                    def: Parameter {
                                        range: 16..17,
                                        arg: Identifier {
                                            id: "c",
                                            range: 16..17,
                                        },
                                        annotation: None,
                                    },
                                    default: None,
                                },
                            ],
                            kwarg: None,
                        },
                        body: Constant(
                            ExprConstant {
                                range: 19..20,
                                value: Int(
                                    1,
                                ),
                                kind: None,
                            },
                        ),
                    },
                ),
            },
        ),
    ],
)
