crates/ruff_python_parser/src/snapshots/ruff_python_parser__function__tests__lambda_kw_only_args_with_defaults.snap
---
source: crates/ruff_python_parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        Expr(
            StmtExpr {
                range: 0..26,
                value: Lambda(
                    ExprLambda {
                        range: 0..26,
                        parameters: Parameters {
                            range: 7..23,
                            posonlyargs: [],
                            args: [],
                            vararg: None,
                            kwonlyargs: [
                                ParameterWithDefault {
                                    range: 10..11,
                                    parameter: Parameter {
                                        range: 10..11,
                                        name: Identifier {
                                            id: "a",
                                            range: 10..11,
                                        },
                                        annotation: None,
                                    },
                                    default: None,
                                },
                                ParameterWithDefault {
                                    range: 13..17,
                                    parameter: Parameter {
                                        range: 13..14,
                                        name: Identifier {
                                            id: "b",
                                            range: 13..14,
                                        },
                                        annotation: None,
                                    },
                                    default: Some(
                                        Constant(
                                            ExprConstant {
                                                range: 15..17,
                                                value: Int(
                                                    20,
                                                ),
                                                kind: None,
                                            },
                                        ),
                                    ),
                                },
                                ParameterWithDefault {
                                    range: 19..23,
                                    parameter: Parameter {
                                        range: 19..20,
                                        name: Identifier {
                                            id: "c",
                                            range: 19..20,
                                        },
                                        annotation: None,
                                    },
                                    default: Some(
                                        Constant(
                                            ExprConstant {
                                                range: 21..23,
                                                value: Int(
                                                    30,
                                                ),
                                                kind: None,
                                            },
                                        ),
                                    ),
                                },
                            ],
                            kwarg: None,
                        },
                        body: Constant(
                            ExprConstant {
                                range: 25..26,
                                value: Int(
                                    1,
                                ),
                                kind: None,
                            },
                        ),
                    },
                ),
            },
        ),
    ],
)
