crates/ruff_python_parser/src/snapshots/ruff_python_parser__function__tests__lambda_no_args.snap
---
source: crates/ruff_python_parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        Expr(
            StmtExpr {
                range: 0..9,
                value: Lambda(
                    ExprLambda {
                        range: 0..9,
                        args: Parameters {
                            range: 6..6,
                            posonlyargs: [],
                            args: [],
                            vararg: None,
                            kwonlyargs: [],
                            kwarg: None,
                        },
                        body: Constant(
                            ExprConstant {
                                range: 8..9,
                                value: Int(
                                    1,
                                ),
                                kind: None,
                            },
                        ),
                    },
                ),
            },
        ),
    ],
)
