crates/ruff_python_parser/src/snapshots/ruff_python_parser__function__tests__lambda_pos_and_kw_only_args.snap
---
source: crates/ruff_python_parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        Expr(
            StmtExpr {
                range: 0..26,
                value: Lambda(
                    ExprLambda {
                        range: 0..26,
                        parameters: Parameters {
                            range: 7..23,
                            posonlyargs: [],
                            args: [
                                ParameterWithDefault {
                                    range: 7..8,
                                    def: Parameter {
                                        range: 7..8,
                                        arg: Identifier {
                                            id: "a",
                                            range: 7..8,
                                        },
                                        annotation: None,
                                    },
                                    default: None,
                                },
                                ParameterWithDefault {
                                    range: 10..11,
                                    def: Parameter {
                                        range: 10..11,
                                        arg: Identifier {
                                            id: "b",
                                            range: 10..11,
                                        },
                                        annotation: None,
                                    },
                                    default: None,
                                },
                                ParameterWithDefault {
                                    range: 13..14,
                                    def: Parameter {
                                        range: 13..14,
                                        arg: Identifier {
                                            id: "c",
                                            range: 13..14,
                                        },
                                        annotation: None,
                                    },
                                    default: None,
                                },
                            ],
                            vararg: None,
                            kwonlyargs: [
                                ParameterWithDefault {
                                    range: 19..20,
                                    def: Parameter {
                                        range: 19..20,
                                        arg: Identifier {
                                            id: "d",
                                            range: 19..20,
                                        },
                                        annotation: None,
                                    },
                                    default: None,
                                },
                                ParameterWithDefault {
                                    range: 22..23,
                                    def: Parameter {
                                        range: 22..23,
                                        arg: Identifier {
                                            id: "e",
                                            range: 22..23,
                                        },
                                        annotation: None,
                                    },
                                    default: None,
                                },
                            ],
                            kwarg: None,
                        },
                        body: Constant(
                            ExprConstant {
                                range: 25..26,
                                value: Int(
                                    0,
                                ),
                                kind: None,
                            },
                        ),
                    },
                ),
            },
        ),
    ],
)
